--- a/configs/zero2_config.json
+++ b/configs/zero2_config.json
@@ -20,12 +20,13 @@
         }
     },
     "scheduler": {
-        "type": "WarmupLR",
+        "type": "WarmupDecayLR",
         "params": {
             "warmup_min_lr": "auto",
             "warmup_max_lr": "auto",
             "warmup_num_steps": "auto",
-            "warmup_type": "linear"
+            "warmup_type": "linear",
+            "total_num_steps": "auto"
         }
     },
     "zero_optimization": {
