--- a/configs/zero3_config.json
+++ b/configs/zero3_config.json
@@ -20,11 +20,12 @@
         }
     },
     "scheduler": {
-        "type": "WarmupLR",
+        "type": "WarmupDecayLR",
         "params": {
             "warmup_min_lr": "auto",
             "warmup_max_lr": "auto",
-            "warmup_num_steps": "auto"
+            "warmup_num_steps": "auto",
+            "total_num_steps": "auto"
         }
     },
     "zero_optimization": {
