--- a/configs/zero3_offload_config.json
+++ b/configs/zero3_offload_config.json
@@ -3,11 +3,12 @@
         "enabled": "auto"
     },
     "scheduler": {
-        "type": "WarmupLR",
+        "type": "WarmupDecayLR",
         "params": {
             "warmup_min_lr": "auto",
             "warmup_max_lr": "auto",
-            "warmup_num_steps": "auto"
+            "warmup_num_steps": "auto",
+            "total_num_steps": "auto"
         }
     },
     "optimizer": {
